test/core/errors/literals_error/zs/hexadecimal_string_literal_error.zs
package hexadecimal_string_literal_error;

const string HEXADECIMAL_STRING_LITERAL = "This is wrong escaped hexadecimal character \xWRONG";
